--- a/src/components/ChatInput/style.css
+++ b/src/components/ChatInput/style.css
@@ -1,17 +1,20 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css);
 .formInput{
-    border-radius:10px;
+    width: 100%;
+    
     border-top:1px solid white; 
-    padding:1% 4% 1% 4%; 
     display:flex;
     justify-content: space-around;
+    
 }
 .textInput{
-    width:80%;
+    width:70%;
     background:none;
-    border: none; 
-    border-bottom: 1px solid white;
+    border-radius: 8px;
+    border: 1px solid white; 
     padding:10px 15px;
+    margin: 4px;
+    margin-top: 6px;
     color:white;
 }
 .textInput:focus{
@@ -21,8 +24,13 @@
     background-image: url('../../utils/image/send.png');
     background-position: center;
     background-repeat: no-repeat;
-    margin: 5px;
+    margin: 10px;
+    border-radius: 50%;
     background-size: contain;
     width:25px;
     height: 25px;
+}
+
+.inputSend:hover{
+    background-color: rgb(57, 65, 73);
 }
