--- a/src/components/ChatBox/style.css
+++ b/src/components/ChatBox/style.css
@@ -21,3 +21,37 @@
 
 }
 
+
+.scroll::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+}
+.scroll::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background: #3060c0;
+  border: 2px none #ffffff;
+  border-radius: 50px;
+}
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+.scroll::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+.scroll::-webkit-scrollbar-track {
+  background: #322f2f;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+.scroll::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+.scroll::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+.scroll::-webkit-scrollbar-corner {
+  background: transparent;
+}
